--- a/people.html
+++ b/people.html
@@ -99,13 +99,13 @@
 					<span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>                                                      Ph.D. Students</strong></span></p>
 <hr align="center" color="#ff7700" size="1" width="100%" /></td>
 </tr><tr><td style="width: 124px;">
-				<a href="../zhidong-su.html" style="color: rgb(255, 102, 0);"><img height="124" src="../sites/default/files/pictures/people/ZhidongSu.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/qiaojin.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
-<p><a href="../zhidong-su.html" style="color: rgb(255, 102, 0);"><strong>Zhidong Su</strong></a><br />
+<p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Qiao Jin</strong></a><br />
 					Research Interest:<br />
 					Mobile robotics, natural language processing, computer vision,<br />
 					and machine learning<br />
-					Phone: (405) 780-2992<br /><a href="mailto:zhidong.su@okstate.edu" style="color: rgb(255, 102, 0);">zhidong.su@okstate.edu</a></p>
+					Phone: (405) 780-2992<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">zhidong.su@okstate.edu</a></p>
 </td>
 <td style="width: 124px;">
 				<a href="../jiaxinglu.html" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="../sites/default/files/pictures/people/JiaxingLu.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
