--- a/people.html
+++ b/people.html
@@ -105,7 +105,7 @@
 
 
 	<td style="width: 124px;">
-	<a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><img alt="Dr. Haobo Jiang" src="./people/pictures/haobojiang.jpg" style="border: 0px currentColor; border-image: none; width: 96px; height: 124px; margin-left: 8px;" />
+	<a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><img alt="Dr. Haobo Jiang" src="./people/pictures/haobojiang.jpg" style="border: 0px currentColor; border-image: none; width: 96px; height: 124px; margin-left: 8px; margin-right: 8px;" />
 	</a>
     </td>
     <td style="width: 276px;" valign="top">
@@ -125,7 +125,7 @@
 
 <tr></tr>
 <tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
-<p class="rteleft"><span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>                                                      Ph.D. Students</strong></span></p>
+<p class="rteleft"><span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>  Ph.D. Students</strong></span></p>
 <hr align="center" color="#ff7700" size="1" width="100%" /></td>
 </tr>
 
@@ -160,7 +160,7 @@
 <tr>
 
 <td style="width: 124px;">
-				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/qiaojin.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/chunxianghou.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
 <p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Chunxiang Hou</strong></a><br />
 					Research Interest:<br />
@@ -171,7 +171,7 @@
 
 
 <td style="width: 124px;">
-				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/qiaojin.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/chaoxiong.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
 <p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Chao Xiong</strong></a><br />
 					Research Interest:<br />
@@ -184,7 +184,7 @@
 <tr>
 
 <td style="width: 124px;">
-				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/qiaojin.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/haodongyin.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
 <p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Haodong Yin</strong></a><br />
 					Research Interest:<br />
@@ -195,6 +195,12 @@
 
 </tr>
 
+<td style="width: 124px;" valign="top">
+				 </td>
+</tr><tr><td style="width: 124px;">
+				 </td>
+<td style="width: 276px;" valign="top">
+				 </td>
 
 <tr></tr>
 
