--- a/people.html
+++ b/people.html
@@ -66,66 +66,73 @@
 <!-- /.container -->
 <!-- Page Content -->	
        
-<div class="content clearfix">
-<div class="field field-name-body field-type-text-with-summary field-label-hidden">
-	<div class="field-items">
-		<div class="field-item even" property="content:encoded"><p> </p>
-			<hr align="center" color="#ff7700" size="1" width="100%" /><p> </p>
-			<p> </p>
-
-	<table align="center" border="0" cellpadding="1" cellspacing="0" style="color: rgb(51, 51, 51); width: 832px;" width="100%"><tbody>
-		
-
-		<tr>
-			<td align="center" colspan="6" style="width: 829px;" valign="bottom">
-				<p class="rteleft"><span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>                                                           Faculty & Staff</strong></span></p>
-				<hr align="center" color="#ff7700" size="1" width="100%" /></td>
-		</tr>
-
-		<tr><td style="width: 124px;"></td></tr>
+  <div class="content clearfix">
+    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p> </p>
+<hr align="center" color="#ff7700" size="1" width="100%" /><p> </p>
+<p> </p>
 
 
-	<tr>
+<table align="center" border="0" cellpadding="1" cellspacing="0" style="color: rgb(51, 51, 51); width: 832px;" width="100%"><tbody><tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
+<p class="rteleft"><span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>                                                           Faculty</strong></span></p>
+<hr align="center" color="#ff7700" size="1" width="100%" /></td></tr>
 
-	<td style="width: 124px;">
-	<a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><img alt="Dr. Haobo Jiang" src="./people/pictures/haobojiang.jpg" style="border: 0px currentColor; border-image: none; width: 96px; height: 124px; margin-left: 8px;" />
-	</a>
-    </td>
+<!-- 
+<tr><td style="width: 124px;"></td></tr>
 
-    <td style="width: 276px;" valign="top">
-    	<p><a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><strong>Dr. Haobo Jiang</strong></a><br />
+<tr>
+
+<td style="width: 124px;">
+	<a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><img alt="Dr. Haobo Jiang" src="./people/pictures/haobojiang.jpg" style="border: 0px currentColor; border-image: none; width: 96px; height: 124px; margin-left: 8px;" /></a></td>
+<td style="width: 276px;" valign="top">
+<p><a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><strong>Dr. Haobo Jiang</strong></a><br />
 					Regents Professor<br />
-					Phone: (405) 744-9400<br /><a href="mailto:haobo.jiang@okstate.edu" style="color: rgb(255, 102, 0);">haobo.jiang@okstate.edu</a>
-				</p>
-    </td>
-    <td style="width: 124px;"></td>
-    <td style="width: 293px;" valign="top">
-    <p> </p>
-    </td>
-
-
-	<td style="width: 124px;">
-	<a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><img alt="Dr. Haobo Jiang" src="./people/pictures/haobojiang.jpg" style="border: 0px currentColor; border-image: none; width: 96px; height: 124px; margin-left: 8px; margin-right: 8px;" />
-	</a>
-    </td>
-    <td style="width: 276px;" valign="top">
-    	<p><a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><strong>Wang Yang</strong></a><br />
-					Regent Professor<br />
-					Phone: (405) 744-9400<br /><a href="mailto:haobo.jiang@okstate.edu" style="color: rgb(255, 102, 0);">haobo.jiang@okstate.edu</a>
-				</p>
-    </td>
-
-    <td style="width: 124px;"></td>
-    <td style="width: 293px;" valign="top">
-    <p> </p>
-    </td>
-    </tr>
+					Phone: (405) 744-9400<br /><a href="mailto:haobo.jiang@okstate.edu" style="color: rgb(255, 102, 0);">haobo.jiang@okstate.edu</a></p>
+</td> -->
 
 
 
-<tr></tr>
-<tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
-<p class="rteleft"><span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>  Ph.D. Students</strong></span></p>
+
+<tr><td style="width: 124px;">
+				<a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/haobojiang.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+<td style="width: 276px;" valign="top">
+<p><a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><strong>Dr. Haobo Jiang</strong></a><br />
+					Regents Professor<br />
+<!-- 					Mobile robotics, natural language processing, computer vision,<br />
+					and machine learning<br /> -->
+					Phone: (405) 744-9400<br /><a href="mailto:haobo.jiang@okstate.edu" style="color: rgb(255, 102, 0);">haobo.jiang@okstate.edu</a></p>
+</td>
+<td style="width: 124px;">
+	<a href="https://experts.okstate.edu/haobo.jiang"  style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/yangwang.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+<td style="width: 293px;" valign="top">
+				<a href="https://experts.okstate.edu/haobo.jiang" style="color: rgb(255, 102, 0);"><strong>Yang Wang</strong></a><br />
+				Research Interest:<br />
+				Artificial Intelligence, Machine Learning, and Pattern Recognition<br />
+				Phone: (201) 539-0389<br /><a href="mailto:wang.yang@okstate.edu" style="color: rgb(255, 102, 0);">wang.yang@okstate.edu</a></td>
+<td style="width: 2px;">
+				 </td>
+<td style="width: 4px;" valign="top">
+				 </td>
+</tr>
+
+
+
+
+<td style="width: 124px;"></td>
+<td style="width: 293px;" valign="top"><p> </p></td>
+
+
+
+
+</tr><!--
+<tr><td align="center" colspan="6" valign="bottom">
+				<br />
+				<span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>Current Visiting Scholars</strong></span></p>
+<hr align="center" color="#ff7700" size="1" width="100%" />
+			</td>
+</tr>
+<p>//--><tr></tr><tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
+<p class="rteleft">
+					<span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>                                                      Ph.D. Students</strong></span></p>
 <hr align="center" color="#ff7700" size="1" width="100%" /></td>
 </tr>
 
@@ -134,16 +141,13 @@
 <td style="width: 276px;" valign="top">
 <p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Qiao Jin</strong></a><br />
 					Research Interest:<br />
-					Mobile robotics, natural language processing, computer vision,<br />
-					and machine learning<br />
+					Serine protease homologue, Insect melanization<br />
 					Phone: (405) 614-9979<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">qjin@okstate.edu</a></p>
 </td>
-
-
 <td style="width: 124px;">
-				<a href="../tishengshan.html" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="../sites/default/files/pictures/people/tishengshan.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+				<a href="../jiaxinglu.html" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="../sites/default/files/pictures/people/JiaxingLu.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 293px;" valign="top">
-				<a href="../tishengshan.html" style="color: rgb(255, 102, 0);"><strong>Tisheng Shan</strong></a><br />
+				<a href="../jiaxinglu.html" style="color: rgb(255, 102, 0);"><strong>Tisheng Shan</strong></a><br />
 				Research Interest:<br />
 				Artificial Intelligence, Machine Learning, and Pattern Recognition<br />
 				Phone: (201) 539-0389<br /><a href="mailto:tisheng.shan@okstate.edu" style="color: rgb(255, 102, 0);">tisheng.shan@okstate.edu</a></td>
@@ -151,60 +155,53 @@
 				 </td>
 <td style="width: 4px;" valign="top">
 				 </td>
-</tr><tr><td style="width: 124px;">
-				 </td>
-</tr><tr><td style="width: 124px;">
-				 </td></tr>
+</tr>
 
 
-<tr>
 
-<td style="width: 124px;">
-				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/chunxianghou.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+<tr><td style="width: 124px;">
+				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/qiaojin.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
 <p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Chunxiang Hou</strong></a><br />
 					Research Interest:<br />
 					Mobile robotics, natural language processing, computer vision,<br />
 					and machine learning<br />
-					Phone: (405) 614-9979<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">qjin@okstate.edu</a></p>
+					Phone: (405) 780-2992<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">chunxiang.hou@okstate.edu</a></p>
 </td>
-
-
 <td style="width: 124px;">
-				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/chaoxiong.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
-<td style="width: 276px;" valign="top">
-<p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Chao Xiong</strong></a><br />
-					Research Interest:<br />
-					Mobile robotics, natural language processing, computer vision,<br />
-					and machine learning<br />
-					Phone: (405) 614-9979<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">qjin@okstate.edu</a></p>
-</td>
+				<a href="../jiaxinglu.html" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="../sites/default/files/pictures/people/JiaxingLu.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+<td style="width: 293px;" valign="top">
+				<a href="../jiaxinglu.html" style="color: rgb(255, 102, 0);"><strong>Chao Xiong </strong></a><br />
+				Research Interest:<br />
+				Artificial Intelligence, Machine Learning, and Pattern Recognition<br />
+				Phone: (201) 539-0389<br /><a href="mailto:jiaxing.lu@okstate.edu" style="color: rgb(255, 102, 0);">chao.xiong@okstate.edu</a></td>
+<td style="width: 2px;">
+				 </td>
+<td style="width: 4px;" valign="top">
+				 </td>
 </tr>
 
-<tr>
 
-<td style="width: 124px;">
-				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/haodongyin.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+<tr><td style="width: 124px;">
+				<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="/people/pictures/qiaojin.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
 <p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Haodong Yin</strong></a><br />
 					Research Interest:<br />
 					Mobile robotics, natural language processing, computer vision,<br />
 					and machine learning<br />
-					Phone: (405) 614-9979<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">qjin@okstate.edu</a></p>
+					Phone: (405) 780-2992<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">haodong.yin@okstate.edu</a></p>
 </td>
 
 </tr>
 
-<td style="width: 124px;" valign="top">
-				 </td>
-</tr><tr><td style="width: 124px;">
-				 </td>
-<td style="width: 276px;" valign="top">
-				 </td>
 
-<tr></tr>
+<tr><td style="width: 124px;">
+				 </td>
+</tr>
 
-<tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
+<tr><td style="width: 124px;">
+				 </td>
+</tr><tr></tr><tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
 <p class="rteleft"><span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>                                                       M.S. Students</strong></span></p>
 <hr align="center" color="#ff7700" size="1" width="100%" /></td>
 </tr><tr><td style="width: 124px;">
@@ -239,7 +236,6 @@
 				Research Interest:<br />
 				Embedded Systems Development, VLSI, and Computer Vision<br />
 				Phone: (405) 905-9535<br /><a href="mailto:brandon.ong@okstate.edu" style="color: rgb(255, 102, 0);">brandon.ong@okstate.edu</a></td>
-
 <td style="width: 124px;">
 				<a href="../nickloeffelholz.html" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="../sites/default/files/pictures/people/NickLoeffelholz.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="110" /></a></td>
 <td style="width: 293px;" valign="top">
@@ -255,11 +251,7 @@
 				 </td>
 <td style="width: 276px;" valign="top">
 				 </td>
-
-</tr>
-
-
-<tr><td style="width: 124px;">
+</tr><tr><td style="width: 124px;">
 				<a href="../danielalbrecht.html" style="color: rgb(255, 102, 0);"><img height="124" src="../sites/default/files/pictures/people/danielalbrecht2.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
 				<a href="../danielalbrecht.html" style="color: rgb(255, 102, 0);"><strong>Daniel Albrecht</strong></a><br />
@@ -274,9 +266,33 @@
 				 </td>
 <td style="width: 276px;" valign="top">
 				 </td>
+</tr><!--<tr><td align="center" colspan="6" valign="bottom">
+				<br />
+				<span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>Visiting Scholars</strong></span></p>
+<hr align="center" color="#ff7700" size="1" width="100%" />
+			</td>
 </tr>
-
-<tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
+<tr>
+<td>
+				&nbsp;</td>
+</tr>
+<tr>
+		</tr>
+<tr>
+<td valign="top">
+				&nbsp;</td>
+</tr>
+<tr>
+<td>
+				&nbsp;</td>
+</tr>
+<tr>
+<td>
+				&nbsp;</td>
+<td valign="top">
+				&nbsp;</td>
+</tr>
+<p>--><tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
 <p class="rteleft">
 					<span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>                                                      Alumni Ph.D.</strong></span></p>
 <hr align="center" color="#ff7700" size="1" width="100%" /></td>
