--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
 				}
 			 </style>
             <div style="text-align:justify;margin-left:50px;width: 130%;">    
-                <p style="font-family:verdana; font-size:35px; font-weight:bold;">About Lab4ISC:</p>
-				<p><img src="./img/logo.png" width="500" style="float:left; margin-top:5px; margin-right:10px;"> </p> <br> <br>
+                <p style="font-family:verdana; font-size:35px; font-weight:bold;">About Lab:</p>
+				<p><img src="./img/logo.png" width="650" style="float:left; margin-top:5px; margin-right:10px;"> </p> <br> <br>
+				<br><br> <br><br><br><br> <br><br><br><br><br><br> <br><br><br>
                 <p style="font-size: 17px; "> <br> <br><br><br> <br>Lab for Intelligent Storage and Computing (Lab4ISC) at Oklahoma State University mainly focuses on two main research directions. One lies in computer systems, including memory/storage systems, system for emerging applications (e.g., Blockchain and machine learning), and storage system security. The other focuses on low-cost hardware design in edge computing and IoT. Specifically, the current research interests include: <br> 
                 <div class="indent">    
                     <p style="font-size: 17px; "> &#x2022; Intelligent and Emerging Storage Systems (e.g., DNA storage, ML for systems, etc.) </p>
