--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 
 <!-- Header of Particles! -->
-<body>
+<!-- <body>
 	<div id="particles-js"></div>
 	<script src="js/particles.js"></script>
 	<script src="js/app2.js"></script>
-	<!-- <script src = "js/particles.min.js"></script> 
+	 <script src = "js/particles.min.js"></script> 
 	<script>
 		particlesJS.load('particles-js', 'particles.json', function(){
 			console.log('particles.json loaded...');
 		});
 	</script>
-	-->
-</body>
+	
+</body> -->
 <header id="header" role="banner" class="site-header" style="height:88px;  min-width:1200px;">
     <!--<nav class="brandbar theme-bb-blue container-fluid">
       <ul class="row">
@@ -171,8 +171,8 @@
 			 </style>
             <div style="text-align:justify;margin-left:50px;width: 130%;">    
                 <p style="font-family:verdana; font-size:35px; font-weight:bold;">About Lab:</p>
-				<p><img src="./img/logo.png" width="650" style="float:left; margin-top:5px; margin-right:10px;"> </p> <br> <br>
-				<br><br> <br><br><br><br> <br><br><br><br><br><br> <br><br><br>
+				<p><img src="./img/logo.png" width="680" height = "420" style="float:left; margin-top:5px; margin-right:10px;"> </p> <br> <br>
+				<br><br> <br><br><br><br> <br><br><br><br><br><br> <br><br>
                 <p style="font-size: 17px; "> <br> <br><br><br> <br>Lab for Intelligent Storage and Computing (Lab4ISC) at Oklahoma State University mainly focuses on two main research directions. One lies in computer systems, including memory/storage systems, system for emerging applications (e.g., Blockchain and machine learning), and storage system security. The other focuses on low-cost hardware design in edge computing and IoT. Specifically, the current research interests include: <br> 
                 <div class="indent">    
                     <p style="font-size: 17px; "> &#x2022; Intelligent and Emerging Storage Systems (e.g., DNA storage, ML for systems, etc.) </p>
