--- a/people/people_qiaojin.html
+++ b/people/people_qiaojin.html
@@ -85,16 +85,16 @@
 						</p>
 						<div class="" style="margin-left: 40px">
 							<p style="font-family:verdana; font-size:20px; font-weight:bold;"> Qiao Jin</p>
-							<p style="font-family:verdana; font-size: 15px; "> Assistant Professor <br> 
+							<p style="font-family:verdana; font-size: 15px; "> Ph.D <br> 
 							School of Electrical and Computer Engineering <br>
 							Oklahoma State University<br><br>
 							Office: GAB 206, 626 Morrill Ave #0068, Stillwater, OK 74078<br>
 							Email: bingzhe dot li at okstate dot edu<br>
 							Phone: 405-744-3602<br><br>
-								<a href="https://scholar.google.com/citations?user=Jhf8Y4AAAAAJ&hl=en">Google Scholar </a> 
+								<a href="https://scholar.google.com/citations?user=rU_cG2wAAAAJ&hl=en&oi=ao">Google Scholar </a> 
 							</p>
 						</div>	
-						<p >Dr. Bingzhe Li is currently an Assistant Professor in the School of Electrical and Computer Engineering at Oklahoma State University. Prior to that, Dr. Li was a Postdoctoral Associate in the Department of Computer Science and Engineering at the University of Minnesota, Twin Cities, advised by <a href="https://www-users.cse.umn.edu/~du/">Prof. David Du</a>. He has received his Ph.D. degree in Electrical Engineering from the University of Minnesota, Twin Cities in 2018, under the supervision of <a href="https://cse.umn.edu/ece/david-lilja">Prof. David Lilja</a>. <br> <br>
+						<p >Dr. Qiao Jin is currently an Assistant Professor in the School of Electrical and Computer Engineering at Oklahoma State University. Prior to that, Dr. Li was a Postdoctoral Associate in the Department of Computer Science and Engineering at the University of Minnesota, Twin Cities, advised by <a href="https://www-users.cse.umn.edu/~du/">Prof. David Du</a>. He has received his Ph.D. degree in Electrical Engineering from the University of Minnesota, Twin Cities in 2018, under the supervision of <a href="https://cse.umn.edu/ece/david-lilja">Prof. David Lilja</a>. <br> <br>
 						His research interests focus on <b>memory and storage systems</b>, <b>DNA storage</b>, <b>systems for machine learning</b>, and <b>low-cost computing architecture</b>. He has authored and co-authored more than 35 research articles in refereed international conferences and premier journals, including USENIX FAST, ACM Systor, DAC, ICCAD, ICCD, ISPA, HotStorage, FPGA, IEEE Transactions (TC, T-ED), ACM Journals/Transactions (TECS, TOS, TOMPECS, JETC), etc. He has served as conference organization committees, technical program committees, reviewers for several major conferences and journals in computer system, storage, and computing architecture including ICCD, DAC, IISWC, etc. In recognition of his research, he received the Best Paper Nomination at the ICCD’21 and the featured paper of the Month at IEEE Transactions of Computers on March 2021. <br> </p>
 				<hr>
 						</div>
