--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv = "X-UA-Compatible" content="ie=edge">
-	<title>particles.js</title>
+	<title>Index</title>
 	<link rel="stylesheet" href="css/style2.css">
 </head>
 
@@ -34,7 +34,7 @@
     <div class="titlebar container-fluid" style="background-color:#000000;style="text-align:justify;margin-left:40px;">
       <div class="row">
         <div class="col">
-          <h1 class="site-title" style="color:#fff"><a href="/" accesskey="H" style="color:#fff;justify;margin-left:70px;">Lab for Intelligent Storage and Computing (Lab4ISC)</a></h1>
+          <h1 class="site-title" style="color:#fff"><a href="/" accesskey="H" style="color:#fff;justify;margin-left:70px;">Lab for Entomology & Plant Pathology</a></h1>
         </div>
         
         <div style="float:right; margin-top:20px; margin-right:120px;">
@@ -147,9 +147,9 @@
 		<ul> 	  -->
 			  <li><a href="index.html" class='active-page'>Home</a></li>
               <li><a href="people.html">People</a></li>
-			  <li><a href="Publications2.html">Publication</a></li>
-			  <li><a href="Teaching.html">Teaching</a></li>
-			  <li><a href="Service.html">Service</a></li>
+			  <li><a href="https://scholar.google.com/citations?user=074_joAAAAAJ&hl=en&oi=ao">Publication</a></li>
+			  <li><a href="https://experts.okstate.edu/haobo.jiang/teaching">Teaching</a></li>
+			  <li><a href="#">Service</a></li>
 	  </ul>
 	</div>
   </div>
@@ -190,18 +190,25 @@
 		<div class="col-md-8">
 			<div style="text-align:justify;margin-left:50px;width: 130%;"> 
 			<p style="font-family:verdana; font-weight:bold; font-size: 15px;"> We are looking for self-motivated students who are interested in pursuing Ph.D. degrees on the topic of developing storage and computer systems or designing energy efficient computing architecture for intelligent systems.</p>
+			<br/>
+			<br/>
+			<p style="font-size: 17px; ">
+			Haobo Jiang, Ph.D, <br/>
+			Professor and Director of Lab <br/>
+			12/24/2022
+		    </p>
 			</div>
 		</div> 
 	</div>
 </div>
-
+<!-- 
 <div class="container" style="margin-top: 20px; margin-bottom: 50px;">
 	<div class="row">		
-		<!-- News -->
+
 		<div class="col-md-8">
 			<div style="text-align:justify;margin-left:50px;width: 150%;"> 
 			<p style="font-family:verdana; color:red; font-weight:bold; font-size: 20px;"> Recent news:</p> 
-			<!-- News body -->
+
 			<p style="font-size: 15px; "> &#8226;09/2022 <b>[Paper]</b> One DNA storage paper is accepted by ICCD'22. Congratulation to Yi!  <br>
 			<p style="font-size: 15px; "> &#8226;08/2022 <b>[Award]</b> <a href="https://news.okstate.edu/articles/engineering-architecture-technology/2022/2.2_million_in_nasa_grants_set_to_establish_osu_as_a_leader_in_two_areas_of_research.html">The RAFT project</a> is awarded by NASA (Co-PI). Thanks for NASA!<br>
 			<p style="font-size: 15px; "> &#8226;08/2022 <b>[Award]</b> <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2208317&HistoricalAwards=false">Hybrid/Convertible SSD project</a> is awarded by NSF (Sole PI). Thanks for NSF!<br>
@@ -232,44 +239,9 @@
 			<p style="font-size: 15px; "> &#8226;08/2020 Joined Oklahoma State University as an Assistant Professor <br>
 			</div>
 		
-			<!-- Prior news -->
-			<div class="container" style="margin-left:30px;">
-			  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Before 2020.08 </button>
-			  <div id="demo" class="collapse" >
-					<p style="font-size: 15px; ">
-					&#8226;04/2020 One paper is accepted by The 12th USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage'20)<br>
-					&#8226;04/2020 One paper is accepted by IEEE Transactions on Computers (TC)<br>
-					&#8226;11/2019 One paper is accepted by ACM Transactions on Modeling and Performance Evaluation of Computing Systems (ACM TOMPECS)<br>
-					&#8226;06/2019 One paper is accepted by IEEE/ACM 2019 International Conference On Computer Aided Design (ICCAD'19)<br>
-					&#8226;06/2019 One US provisional patent application is filled<br>
-					&#8226;05/2019 One paper is accepted by IEEE Transactions on Electron Devices (IEEE T-ED)<br>
-					&#8226;04/2019 One paper is accepted by The 11th USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage'19)<br>
-					&#8226;03/2019 One US provisional patent application is filled<br>
-					&#8226;02/2019 Invited to serve as a Program Committee member for ISVLSI'19<br>
-					&#8226;02/2019 Two papers are accepted by The 29th edition of the ACM Great Lakes Symposium on VLSI (GLSVLSI'19)  <br>
-					&#8226;01/2019 One paper is accepted by ACM Journal on Emerging Technologies in Computing (ACM JETC)<br>
-					&#8226;12/2018 One paper is accepted by The 17th USENIX Conference on File and Storage Technologies (FAST '19) <br> 
-					&#8226;12/2018 One paper is accepted by The 22nd International Symposium on Quality Electronic Design (ISQED'19)<br>
-					&#8226;11/2018 One paper is accepted by Elsevier Performance Evaluation <br>
-					&#8226;11/2018 One paper is accepted by The 2019 ACM/IEEE Conference on Design, Automation and Test in Europe  (DATE'19)<br>
-					&#8226;10/2018 One paper is accepted by ACM Journal on Emerging Technologies in Computing (ACM JETC)<br>
-					&#8226;09/2018 One paper is accepted by The 9th IEEE Annual Ubiquitous Computing, Electronics & Mobile Communication Conference (IEEE UEMCON’18 )<br>
-					&#8226;07/2018 One paper is accepted by The 13th International Conference on Networking, Architecture, and Storage (NAS'18)<br>
-					&#8226;05/2018 The storage I/O re-player tool - TraceRAR is released! [Code]<br>
-					&#8226;04/2018 One paper is accepted by The 10th USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage'18)<br>
-					&#8226;04/2018 One paper is accepted by The 27th International Workshop on Logic & Synthesis (IWLS'18)<br>
-					&#8226;12/2017 One paper is accepted by The 21st International International Symposium on Quality Electronic Design (ISQED'18)<br>
-					&#8226;08/2017  One paper is accepted by The 35th  IEEE International Conference on Computer Design (ICCD'17)<br>
-					&#8226;07/2017 One paper is accepted by The 12th International Conference on Networking, Architecture, and Storage (NAS'17)<br>
-					&#8226;07/2017 One paper is accepted by The 2017 IEEE International Conference on Parallel and Distributed Systems (ICPADS'17)<br>
-					&#8226;07/2016 One paper is accepted by The 11th International Conference on Networking, Architecture, and Storage (NAS'16)<br>
-					&#8226;11/2015 One paper is accepted by The 24th ACM/SIGDA International Symposium on Field-Programmable Gate Arrays (FPGA'16)<br>
-					&#8226;04/2015 One paper is accepted by The 27th Annual IEEE International Conference on Application-specific Systems, Architectures and Processors (ASAP'16)</p>
-			  </div>
-			</div>
 		</div>            
 	</div>
-</div>
+</div> -->
 
 
 <div class="container" style="margin-top: 20px; margin-bottom: 50px; margin-left:430px;">
