--- a/index.html
+++ b/index.html
@@ -251,14 +251,7 @@
 </div>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179030111-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-179030111-1');
-</script>
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=jszZhFQ14IjJqhpJsPhHqmVi2BQdNS45JafQ-ZrLarA&cl=ffffff&w=a"></script>
   
 </body>
 
