--- a/index.html
+++ b/index.html
@@ -244,14 +244,14 @@
 </div> -->
 
 
-<div class="container" style="margin-top: 20px; margin-bottom: 50px; margin-left:430px;">
+<!-- <div class="container" style="margin-top: 20px; margin-bottom: 50px; margin-left:430px;">
 		<div class="col-md-8" style="height: 10vh; width: 13%;">
 			<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=fwTe1IDAk0R0s_W7364cfl12ppYaYf0rBUtvEp5hG5U"></script>
 		</div>            
-</div>
+</div> -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=jszZhFQ14IjJqhpJsPhHqmVi2BQdNS45JafQ-ZrLarA&cl=ffffff&w=a"></script>
+<!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=jszZhFQ14IjJqhpJsPhHqmVi2BQdNS45JafQ-ZrLarA&cl=ffffff&w=a"></script> -->
   
 </body>
 
