--- a/people.html
+++ b/people.html
@@ -73,8 +73,9 @@
 <p> </p>
 
 
-<table align="center" border="0" cellpadding="1" cellspacing="0" style="color: rgb(51, 51, 51); width: 832px;" width="100%"><tbody><tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
-<p class="rteleft"><span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>                                                           Faculty</strong></span></p>
+<table align="center" border="0" cellpadding="1" cellspacing="0" style="color: rgb(51, 51, 51); width: 832px;" width="100%"><tbody>
+<tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
+<p class="rteleft"><span style="color: rgb(255, 102, 0); font-size: 20px;"><strong> Faculty & Staff</strong></span></p>
 <hr align="center" color="#ff7700" size="1" width="100%" /></td></tr>
 
 <!-- 
@@ -305,12 +306,12 @@
 <td style="width: 4px;" valign="top"></td>
 </tr>
 
-<!-- 
+
 <tr>
 <td style="width: 124px;">
 <a href="#" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/c.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
-<p><a href="#" style="color: rgb(255, 102, 0);"><strong>Chunxiang Hou</strong></a><br />
+<p><a href="#" style="color: rgb(255, 102, 0);"><strong>Xiaolong Cao</strong></a><br />
 				Research Interest:<br />
 				Serine protease homologue, Insect melanization<br />
 				Phone: (405) 780-2992<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">chunxiang.hou@okstate.edu</a></p>
@@ -318,7 +319,7 @@
 <td style="width: 124px;">
 <a href="../jiaxinglu.html" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/c.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 293px;" valign="top">
-<a href="#" style="color: rgb(255, 102, 0);"><strong>Chao Xiong </strong></a><br />
+<a href="#" style="color: rgb(255, 102, 0);"><strong>Yan He </strong></a><br />
 				Research Interest:<br />
 				Serine protease homologue, Insect melanization<br />
 				Phone: (201) 539-0389<br /><a href="mailto:jiaxing.lu@okstate.edu" style="color: rgb(255, 102, 0);">chao.xiong@okstate.edu</a></td>
@@ -330,7 +331,7 @@
 <tr><td style="width: 124px;">
 <a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/haodongyin.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
-<p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Haodong Yin</strong></a><br />
+<p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Zelong Miao</strong></a><br />
 				Research Interest:<br />
 				Serine protease homologue, Insect melanization<br />
 				Phone: (405) 780-2992<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">haodong.yin@okstate.edu</a></p>
@@ -364,7 +365,7 @@
 <td style="width: 4px;" valign="top"></td>
 </tr>
 
-
+<!-- 
 <tr>
 <td style="width: 124px;">
 <a href="#" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/c.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
@@ -394,7 +395,7 @@
 				Serine protease homologue, Insect melanization<br />
 				Phone: (405) 780-2992<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">haodong.yin@okstate.edu</a></p>
 </td>
-</tr>
+</tr> -->
 
 
 
