--- a/people.html
+++ b/people.html
@@ -73,7 +73,8 @@
 <p> </p>
 
 
-<table align="center" border="0" cellpadding="1" cellspacing="0" style="color: rgb(51, 51, 51); width: 832px;" width="100%"><tbody>
+<table align="center" border="0" cellpadding="1" cellspacing="0" style="color: rgb(51, 51, 51); width: 832px;" width="100%">
+<tbody>
 <tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
 <p class="rteleft"><span style="color: rgb(255, 102, 0); font-size: 20px;"><strong> Faculty & Staff</strong></span></p>
 <hr align="center" color="#ff7700" size="1" width="100%" /></td></tr>
@@ -122,7 +123,7 @@
 <hr align="center" color="#ff7700" size="1" width="100%" />
 			</td>
 </tr>
-<p>//-->
+<p>-->
 
 <tr></tr><tr><td align="center" colspan="6" style="width: 829px;" valign="bottom">
 <p class="rteleft"><span style="color: rgb(255, 102, 0); font-size: 20px;"><strong>Ph.D. Students</strong></span></p>
@@ -336,7 +337,7 @@
 				Serine protease homologue, Insect melanization<br />
 				Phone: (405) 780-2992<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">haodong.yin@okstate.edu</a></p>
 </td>
-</tr> -->
+</tr> 
 
 
 <tr>
