--- a/people/people_qiaojin.html
+++ b/people/people_qiaojin.html
@@ -86,16 +86,17 @@
 						<div class="" style="margin-left: 40px">
 							<p style="font-family:verdana; font-size:20px; font-weight:bold;"> Qiao Jin</p>
 							<p style="font-family:verdana; font-size: 15px; "> Ph.D <br> 
-							School of Electrical and Computer Engineering <br>
+							Department of Entomology & Plant Pathology <br>
 							Oklahoma State University<br><br>
-							Office: GAB 206, 626 Morrill Ave #0068, Stillwater, OK 74078<br>
-							Email: bingzhe dot li at okstate dot edu<br>
-							Phone: 405-744-3602<br><br>
+							Office: Noble Research Center, Stillwater, OK 74078<br>
+							Email: qjin@okstate.edu<br>
+							Phone: 405-614-9979<br><br>
 								<a href="https://scholar.google.com/citations?user=rU_cG2wAAAAJ&hl=en&oi=ao">Google Scholar </a> 
 							</p>
 						</div>	
-						<p >Dr. Qiao Jin is currently an Assistant Professor in the School of Electrical and Computer Engineering at Oklahoma State University. Prior to that, Dr. Li was a Postdoctoral Associate in the Department of Computer Science and Engineering at the University of Minnesota, Twin Cities, advised by <a href="https://www-users.cse.umn.edu/~du/">Prof. David Du</a>. He has received his Ph.D. degree in Electrical Engineering from the University of Minnesota, Twin Cities in 2018, under the supervision of <a href="https://cse.umn.edu/ece/david-lilja">Prof. David Lilja</a>. <br> <br>
-						His research interests focus on <b>memory and storage systems</b>, <b>DNA storage</b>, <b>systems for machine learning</b>, and <b>low-cost computing architecture</b>. He has authored and co-authored more than 35 research articles in refereed international conferences and premier journals, including USENIX FAST, ACM Systor, DAC, ICCAD, ICCD, ISPA, HotStorage, FPGA, IEEE Transactions (TC, T-ED), ACM Journals/Transactions (TECS, TOS, TOMPECS, JETC), etc. He has served as conference organization committees, technical program committees, reviewers for several major conferences and journals in computer system, storage, and computing architecture including ICCD, DAC, IISWC, etc. In recognition of his research, he received the Best Paper Nomination at the ICCD’21 and the featured paper of the Month at IEEE Transactions of Computers on March 2021. <br> </p>
+						<p >Dr. Qiao Jin is currently an Ph.D student in the Department of Entomology & Plant Pathology at Oklahoma State University. She has received his Master degree in Biochemistry and molecular biology  from Chinese academy of sciences, Beijing, China. <br> <br>
+
+						Her research interests focus on <b>Serine protease homologue</b>, <b> and Insect melanization</b>. <br> </p>
 				<hr>
 						</div>
 						
