--- a/people/people_qiaojin.html
+++ b/people/people_qiaojin.html
@@ -94,7 +94,7 @@
 								<a href="https://scholar.google.com/citations?user=rU_cG2wAAAAJ&hl=en&oi=ao">Google Scholar </a> 
 							</p>
 						</div>	
-						<p >Dr. Qiao Jin is currently an Ph.D student in the Department of Entomology & Plant Pathology at Oklahoma State University. She has received his Master degree in Biochemistry and molecular biology  from Chinese academy of sciences, Beijing, China. <br> <br>
+						<p >Dr. Qiao Jin is currently an Ph.D student in the Department of Entomology & Plant Pathology at Oklahoma State University. She has received her Master degree in Biochemistry and molecular biology  from Chinese academy of sciences, Beijing, China. <br> <br>
 
 						Her research interests focus on <b>Serine protease homologue</b>, <b> and Insect melanization</b>. <br> </p>
 				<hr>
