--- a/people/people_qiaojin.html
+++ b/people/people_qiaojin.html
@@ -91,7 +91,7 @@
 							Office: Noble Research Center, Stillwater, OK 74078<br>
 							Email: qjin@okstate.edu<br>
 							Phone: 405-614-9979<br><br>
-								<a href="https://scholar.google.com/citations?user=rU_cG2wAAAAJ&hl=en&oi=ao">Google Scholar </a> 
+							Personal Page:<a href="https://scholar.google.com/citations?user=rU_cG2wAAAAJ&hl=en&oi=ao">Google Scholar </a> 
 							</p>
 						</div>	
 						<p >Dr. Qiao Jin is currently an Ph.D student in the Department of Entomology & Plant Pathology at Oklahoma State University. She has received her Master degree in Biochemistry and molecular biology  from Chinese academy of sciences, Beijing, China. <br> <br>
