--- a/people.html
+++ b/people.html
@@ -287,9 +287,9 @@
 <hr align="center" color="#ff7700" size="1" width="100%" /></td></tr>
 
 <td style="width: 124px;">
-<a href="https://people.ucas.ac.cn/~0019754?language=en" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/zhenzhou.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+<a href="https://people.ucas.ac.cn/~0019754?language=en" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/zhenzou.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
-<p><a href="https://people.ucas.ac.cn/~0019754?language=en" style="color: rgb(255, 102, 0);"><strong>Zhen Zhou</strong></a><br />
+<p><a href="https://people.ucas.ac.cn/~0019754?language=en" style="color: rgb(255, 102, 0);"><strong>Zhen Zou</strong></a><br />
 				PhD (2001)<br />
 				Professor<br />
 				Institute of Zoology, Chinese Academy of Sciences, China.<br />
@@ -461,10 +461,10 @@
 </tr>
 
 
-</tbody></table><p> </p>
+</tbody></table><p><br/><br/><br/><br/> </p>
 </div></div></div> </div>
 
-  <div class="clearfix"><div class="links"></div></div>
+  <!-- <div class="clearfix"><div class="links"></div></div> -->
 
 </div></div>
 </div></div>
@@ -505,8 +505,8 @@
 </script>					
 
 
-<div class="outer" style="clear:both; width:1000px; min-height: 500px; margin-top:10px; padding-top:20px; padding-left:0px; padding-right:0px; padding-bottom: 30px; background: url(/css/images/bg.png) 0 0 repeat; ">
-<div>
+<!-- <div class="outer" style="clear:both; width:1000px; min-height: 500px; margin-top:10px; padding-top:20px; padding-left:0px; padding-right:0px; padding-bottom: 30px; background: url(/css/images/bg.png) 0 0 repeat; ">
+<div> -->
 
   
 </body>
