--- a/people.html
+++ b/people.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
+<header id="header" role="banner" class="site-header" style="height:88px;  min-width:1200px;">
+    <!--<nav class="brandbar theme-bb-blue container-fluid">
+      <ul class="row">
+        <li class="dept-nd col-lg-6"><a href="http://www.unm.edu/">The University of New Mexico</a></li>
+        <li class="dept dept-current col-lg-5">
+        <a href="http://engineering.nd.edu/" title="College of Engineering" target="_blank">COLLEGE of ENGINEERING</a>
+        </li>
+      </ul>
+    </nav>-->
+    <div class="titlebar container-fluid" style="background-color:#000000;style="text-align:justify;margin-left:40px;">
+      <div class="row">
+        <div class="col">
+          <h1 class="site-title" style="color:#fff"><a href="/" accesskey="H" style="color:#fff;justify;margin-left:70px;">Lab for Entomology & Plant Pathology</a></h1>
+        </div>
+        
+        <div style="float:right; margin-top:20px; margin-right:120px;">
+          <!--<form method="get" action="https://google.com/search" role="search">
+            <input type="search" name="q" placeholder="Search">
+            <button type="submit" style="float:right;"><i class="fa fa-search"></i></button>
+          </form>-->
+        </div>
+      </div>
+    </div>
+</header>
 	
 <head>
 	<title>People</title>
