--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </li>
       </ul>
     </nav>-->
-    <div class="titlebar container-fluid" style="background-color:#000000;style="text-align:justify;margin-left:40px;">
+    <div class="titlebar container-fluid" style="background-color:#FF5733;style="text-align:justify;margin-left:40px;">
       <div class="row">
         <div class="col">
           <h1 class="site-title" style="color:#fff"><a href="/" accesskey="H" style="color:#fff;justify;margin-left:70px;">Lab for Entomology & Plant Pathology</a></h1>
@@ -149,7 +149,7 @@
               <li><a href="people.html">People</a></li>
 			  <li><a href="https://scholar.google.com/citations?user=074_joAAAAAJ&hl=en&oi=ao">Publication</a></li>
 			  <li><a href="https://experts.okstate.edu/haobo.jiang/teaching">Teaching</a></li>
-			  <li><a href="#">Service</a></li>
+			  <!-- <li><a href="#">Resource</a></li> -->
 	  </ul>
 	</div>
   </div>
