--- a/index.html
+++ b/index.html
@@ -9,28 +9,10 @@
 	<link rel="stylesheet" href="css/style2.css">
 </head>
 
-<!-- Header of Particles! -->
-<!-- <body>
-	<div id="particles-js"></div>
-	<script src="js/particles.js"></script>
-	<script src="js/app2.js"></script>
-	 <script src = "js/particles.min.js"></script> 
-	<script>
-		particlesJS.load('particles-js', 'particles.json', function(){
-			console.log('particles.json loaded...');
-		});
-	</script>
 	
-</body> -->
+</body> 
 <header id="header" role="banner" class="site-header" style="height:88px;  min-width:1200px;">
-    <!--<nav class="brandbar theme-bb-blue container-fluid">
-      <ul class="row">
-        <li class="dept-nd col-lg-6"><a href="http://www.unm.edu/">The University of New Mexico</a></li>
-        <li class="dept dept-current col-lg-5">
-        <a href="http://engineering.nd.edu/" title="College of Engineering" target="_blank">COLLEGE of ENGINEERING</a>
-        </li>
-      </ul>
-    </nav>-->
+
     <div class="titlebar container-fluid" style="background-color:#FF5733;style="text-align:justify;margin-left:40px;">
       <div class="row">
         <div class="col">
@@ -38,10 +20,7 @@
         </div>
         
         <div style="float:right; margin-top:20px; margin-right:120px;">
-          <!--<form method="get" action="https://google.com/search" role="search">
-            <input type="search" name="q" placeholder="Search">
-            <button type="submit" style="float:right;"><i class="fa fa-search"></i></button>
-          </form>-->
+
         </div>
       </div>
     </div>
@@ -205,57 +184,7 @@
 		</div> 
 	</div>
 </div>
-<!-- 
-<div class="container" style="margin-top: 20px; margin-bottom: 50px;">
-	<div class="row">		
 
-		<div class="col-md-8">
-			<div style="text-align:justify;margin-left:50px;width: 150%;"> 
-			<p style="font-family:verdana; color:red; font-weight:bold; font-size: 20px;"> Recent news:</p> 
-
-			<p style="font-size: 15px; "> &#8226;09/2022 <b>[Paper]</b> One DNA storage paper is accepted by ICCD'22. Congratulation to Yi!  <br>
-			<p style="font-size: 15px; "> &#8226;08/2022 <b>[Award]</b> <a href="https://news.okstate.edu/articles/engineering-architecture-technology/2022/2.2_million_in_nasa_grants_set_to_establish_osu_as_a_leader_in_two_areas_of_research.html">The RAFT project</a> is awarded by NASA (Co-PI). Thanks for NASA!<br>
-			<p style="font-size: 15px; "> &#8226;08/2022 <b>[Award]</b> <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2208317&HistoricalAwards=false">Hybrid/Convertible SSD project</a> is awarded by NSF (Sole PI). Thanks for NSF!<br>
-			<p style="font-size: 15px; "> &#8226;07/2022 <b>[Award]</b> <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2204657&HistoricalAwards=false">Collaborative DNA storage project</a> is awarded by NSF. Thanks for NSF!<br>
-			<p style="font-size: 15px; "> &#8226;07/2022 <b>[Paper]</b> One paper is accepted by ICCAD'22  <br>
-			<p style="font-size: 15px; "> &#8226;07/2022 <b>[Service]</b>  Inivited as SEED'22 Registration Chair  <br>
-			<p style="font-size: 15px; "> &#8226;06/2022 <b>[Paper]</b> One paper is accepted by NAS'22  <br>
-			<p style="font-size: 15px; "> &#8226;05/2022 <b>[Service]</b> Invited as ICCAD'22 TPC  <br>
-			<p style="font-size: 15px; "> &#8226;04/2022 <b>[Paper]</b> One paper is accepted as a poster by CODE+ISSS'22 <br>
-			<p style="font-size: 15px; "> &#8226;03/2022 <b>[Award]</b> Obtained a gift donation from NVIDIA ACADEMIC HARDWARE GRANT PROGRAM. Thanks for NVIDIA!  <br>
-			<p style="font-size: 15px; "> &#8226;01/2022 <b>[Member]</b> Joined as a member of <a href="https://dnastoragealliance.org/">DNA Data Storage Alliance</a> <br>
-			<p style="font-size: 15px; "> &#8226;01/2022 <b>[Talk]</b> Invited talk at the University of Louisiana at Lafayette<br>
-			<p style="font-size: 15px; "> &#8226;12/2021 <b>[Paper]</b> A Blockchain survey paper is accepted by ACM Transactions on Embedded Computing Systems (ACM TECS)<br>
-			<p style="font-size: 15px; "> &#8226;11/2021 <b>[Paper]</b> One paper is accepted by ACM Transactions on Storage (ACM TOS)<br>
-			<p style="font-size: 15px; "> &#8226;10/2021 <b>[Award]</b> "Block-LSM" paper selected as the best paper candidate by ICCD'21 (6/246=2.4%) <br>
-			<p style="font-size: 15px; "> &#8226;10/2021 <b>[Service]</b> Inivited as DAC'22 TPC <br>
-			<p style="font-size: 15px; "> &#8226;09/2021 <b>[Paper]</b> One paper is accepted by The 27th Asia and South Pacific Design Automation Conference (ASP-DAC'22)<br>
-			<p style="font-size: 15px; "> &#8226;08/2021 <b>[Paper]</b> Three papers are accepted by 2021 The 39th IEEE International Conference on Computer Design (ICCD'21)<br>
-			<p style="font-size: 15px; "> &#8226;07/2021 <b>[Paper]</b> One paper is accepted by The 19th IEEE International Symposium on Parallel and Distributed Processing with Applications (ISPA'21)<br>
-			<p style="font-size: 15px; "> &#8226;05/2021 <b>[Service]</b> Invited to serve as registration chair for <a href="http://www.iiswc.org/iiswc2021/index.html">IISWC'21</a><br>
-			<p style="font-size: 15px; "> &#8226;04/2021 <b>[Paper]</b> Two papers are accepted by The 14th ACM International System and Storage Conference (Systor'21)<br>
-			<p style="font-size: 15px; "> &#8226;03/2021 <b>[Service]</b> Invited to serve as registration chair for <a href="https://www.iccd-conf.com/Home.html">ICCD'21</a> (Welcome to submit your paper to ICCD'21!)<br>
-			<p style="font-size: 15px; "> &#8226;02/2021 <b>[Paper]</b> One paper is accepted by Design Automation Conference (DAC'21)<br>
-			<p style="font-size: 15px; "> &#8226;02/2021 <b>[Paper]</b> One paper is accepted by IEEE Access<br>
-			<p style="font-size: 15px; "> &#8226;02/2021 <b>[Award] </b> 'TrackLace' paper has been selected as the Featured Paper in IEEE Transactions on Computers (TC)<br>
-			<p style="font-size: 15px; "> &#8226;11/2020 <b>[Service]</b> Inivited as DAC'21 TPC <br>
-			<p style="font-size: 15px; "> &#8226;10/2020 <b>[Service]</b> Served as ICCD'20 Session Chair <br>
-			<p style="font-size: 15px; "> &#8226;08/2020 Joined Oklahoma State University as an Assistant Professor <br>
-			</div>
-		
-		</div>            
-	</div>
-</div> -->
-
-
-<!-- <div class="container" style="margin-top: 20px; margin-bottom: 50px; margin-left:430px;">
-		<div class="col-md-8" style="height: 10vh; width: 13%;">
-			<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=fwTe1IDAk0R0s_W7364cfl12ppYaYf0rBUtvEp5hG5U"></script>
-		</div>            
-</div> -->
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=jszZhFQ14IjJqhpJsPhHqmVi2BQdNS45JafQ-ZrLarA&cl=ffffff&w=a"></script> -->
   
 </body>
 
