--- a/people.html
+++ b/people.html
@@ -242,7 +242,7 @@
 				Phone: (405) 780-2992<br /><a href="mailto:picheng.zhao@okstate.edu" style="color: rgb(255, 102, 0);">picheng.zhao@okstate.edu</a></p>
 	</td>
 	<td style="width: 124px;">
-		<a href="../jiaxinglu.html" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/yingxiahu.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
+		<a href="#" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/yingxiahu.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
 	</td>
 	<td style="width: 293px;" valign="top">
 		<a href="#" style="color: rgb(255, 102, 0);"><strong>Yingxia Hu </strong></a><br />
@@ -266,7 +266,7 @@
 				Phone: (405) 780-2992<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">xiaolong.cao@okstate.edu</a></p>
 	</td>
 	<td style="width: 124px;">
-		<a href="../jiaxinglu.html" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/heyan.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
+		<a href="#" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/heyan.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
 	</td>
 	<td style="width: 293px;" valign="top">
 		<a href="#" style="color: rgb(255, 102, 0);"><strong>Yan He </strong></a><br />
@@ -280,7 +280,7 @@
 
 
 <tr><td style="width: 124px;">
-<a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/zelongmiao.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
+<a href="#" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/zelongmiao.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
 <p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Zelong Miao</strong></a><br />
 				Research Interest:<br />
