--- a/people.html
+++ b/people.html
@@ -172,7 +172,7 @@
 				Phone: (405) 780-2992<br /><a href="mailto:chunxiang.hou@okstate.edu" style="color: rgb(255, 102, 0);">chunxiang.hou@okstate.edu</a></p>
 	</td>
 	<td style="width: 124px;">
-		<a href="#" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/c.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
+		<a href="#" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/chaoxiong.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
 	</td>
 	<td style="width: 293px;" valign="top">
 		<a href="#" style="color: rgb(255, 102, 0);"><strong>Chao Xiong </strong></a><br />
