--- a/index.html
+++ b/index.html
@@ -152,12 +152,8 @@
                 <p style="font-family:verdana; font-size:35px; font-weight:bold;">About Lab:</p>
 				<p><img src="./img/logo.png" width="680" height = "420" style="float:left; margin-top:5px; margin-right:10px;"> </p> <br> <br>
 				<br><br> <br><br><br><br> <br><br><br><br><br><br> <br><br>
-                <p style="font-size: 17px; "> <br> <br><br><br> <br>Lab for Intelligent Storage and Computing (Lab4ISC) at Oklahoma State University mainly focuses on two main research directions. One lies in computer systems, including memory/storage systems, system for emerging applications (e.g., Blockchain and machine learning), and storage system security. The other focuses on low-cost hardware design in edge computing and IoT. Specifically, the current research interests include: <br> 
-                <div class="indent">    
-                    <p style="font-size: 17px; "> &#x2022; Intelligent and Emerging Storage Systems (e.g., DNA storage, ML for systems, etc.) </p>
-					<p style="font-size: 17px; "> &#x2022; Systems for Big Data Applications (e.g., Blockchain, Machine Learning, etc.) </p>
-                    <p style="font-size: 17px; "> &#x2022; Energy-efficient and Low-power Computing Architecture </p>
-                </div>
+                <p style="font-size: 17px; "> <br> <br><br><br> <br>Our lab is focused on the research of insect biochemical and molecular biology. The work mainly focuses on the studies of insect immune chemistry, many progresses have been made revealing the serine protease cascade reaction system in insect blood and its multiple regulation methods and clarifying the framework of the extracellular immune signal recognition transduction regulation system. The research fields in this lab cover insect comparative genomics, transcription and proteomics, recombinant protein expression, purification and functional analysis, enzyme and inhibitor kinetics research, protein localization mutagenesis and three-dimensional structure analysis. <br> 
+
                     </p>
 			</div>
 		</div> 
@@ -168,7 +164,7 @@
 		<!-- Recuiting students -->
 		<div class="col-md-8">
 			<div style="text-align:justify;margin-left:50px;width: 130%;"> 
-			<p style="font-family:verdana; font-weight:bold; font-size: 15px;"> We are looking for self-motivated students who are interested in pursuing Ph.D. degrees on the topic of developing storage and computer systems or designing energy efficient computing architecture for intelligent systems.</p>
+			<p style="font-family:verdana; font-weight:bold; font-size: 15px;"> We are looking for self-motivated students who are interested in pursuing Ph.D. degrees on the topic of insect biochemical and molecular biology.</p>
 			<br/>
 			<br/>
 			<p style="font-size: 17px; ">
