--- a/people/people_qiaojin.html
+++ b/people/people_qiaojin.html
@@ -12,6 +12,22 @@
 	<link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   
 </head>
+
+<header id="header" role="banner" class="site-header" style="height:88px;  min-width:1200px;">
+
+    <div class="titlebar container-fluid" style="background-color:#FF5733;style="text-align:justify;margin-left:40px;">
+      <div class="row">
+        <div class="col">
+          <h1 class="site-title" style="color:#fff"><a href="/" accesskey="H" style="color:#fff;justify;margin-left:70px;">Lab for Entomology & Plant Pathology</a></h1>
+        </div>
+        
+        <div style="float:right; margin-top:20px; margin-right:120px;">
+
+        </div>
+      </div>
+    </div>
+</header>
+
 <body>
 
 <!-- Navigation -->
@@ -55,11 +71,12 @@
 	  <ul class="nav navbar-nav">
 		<li><a href="../index.html">Home</a></li>
 		<li><a href="../people.html" class='active-page'>People</a></li>
-		<li><a href="../Publications2.html">Publication</a></li>
-		<li><a href="../Teaching.html">Teaching</a></li>
-		<li><a href="../Service.html">Service</a></li>
+		<li><a href="https://scholar.google.com/citations?user=074_joAAAAAJ&hl=en&oi=ao">Publication</a></li>
+		<li><a href="https://experts.okstate.edu/haobo.jiang/teaching">Teaching</a></li>
+		<!-- <li><a href="#">Service</a></li> -->
 	  </ul>
 	</div>
+	
   </div>
 </nav>
 
