--- a/people.html
+++ b/people.html
@@ -215,6 +215,7 @@
 				Professor<br />
 				Institute of Zoology, Chinese Academy of Sciences, China.<br />
 				<a href="mailto:zouzhen@ioz.ac.cn" style="color: rgb(255, 102, 0);">zouzhen@ioz.ac.cn</a></p>
+				<br/>
 </td>
 <td style="width: 124px;">
 	<a href="https://ppc.nwsuaf.edu.cn/szdw/kjdw/305122_mobile.htm" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/zhiqianglv.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
@@ -343,7 +344,7 @@
 				Phone: (405) 614-9979<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">qjin@okstate.edu</a></p>
 	</td>
 	<td style="width: 124px;">
-		<a href="#" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="#" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
+		<a href="#" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/tishengshan.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
 	</td>
 	<td style="width: 293px;" valign="top">
 				<a href="#" style="color: rgb(255, 102, 0);"><strong>Tisheng Shan</strong></a><br />
