--- a/people.html
+++ b/people.html
@@ -235,7 +235,7 @@
 		<a href="https://www.linkedin.com/in/picheng-zhao-69012130/" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/pichengzhao.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
 	</td>
 	<td style="width: 276px;" valign="top">
-		<p><a href="#" style="color: rgb(255, 102, 0);"><strong>Picheng Zhao</strong></a><br />
+		<p><a href="https://www.linkedin.com/in/picheng-zhao-69012130/" style="color: rgb(255, 102, 0);"><strong>Picheng Zhao</strong></a><br />
 			    Scientist II <br/>
 				Research Interest:<br />
 				Insect innate immunity<br /><a href="mailto:picheng.zhao@okstate.edu" style="color: rgb(255, 102, 0);">picheng.zhao@okstate.edu</a></p>
