--- a/people.html
+++ b/people.html
@@ -190,7 +190,7 @@
 		<a href="#" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/haodongyin.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
 	</td>
 	<td style="width: 276px;" valign="top">
-		<p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Haodong Yin</strong></a><br />
+		<p><a href="#" style="color: rgb(255, 102, 0);"><strong>Haodong Yin</strong></a><br />
 				Research Interest:<br />
 				Serine protease homologue, Insect melanization<br />
 				Phone: (405) 780-2992<br /><a href="mailto:haodong.yin@okstate.edu" style="color: rgb(255, 102, 0);">haodong.yin@okstate.edu</a></p>
@@ -281,7 +281,7 @@
 <tr><td style="width: 124px;">
 <a href="#" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/zelongmiao.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a></td>
 <td style="width: 276px;" valign="top">
-<p><a href="./people/people_qiaojin.html" style="color: rgb(255, 102, 0);"><strong>Zelong Miao</strong></a><br />
+<p><a href="#" style="color: rgb(255, 102, 0);"><strong>Zelong Miao</strong></a><br />
 				Research Interest:<br />
 				Serine protease homologue, Insect melanization<br />
 				Phone: (405) 780-2992<br /><a href="mailto:zelong.miao@okstate.edu" style="color: rgb(255, 102, 0);">zelong.miao@okstate.edu</a></p>
